# final-homework

./: go_to_points.py  move_stop_rotate.py
turtlebot3_service_robot/: CMakeLists.txt  README.md  package.xml
turtlebot3_service_robot/config/: mission.yaml
turtlebot3_service_robot/launch/: navigation.launch  simulation.launch  slam.launch  task_manager.launch
turtlebot3_service_robot/maps/: map.pgm  map.yaml
turtlebot3_service_robot/models/qr_checkout_area/: model.config  model.sdf
turtlebot3_service_robot/models/qr_checkout_area/materials/scripts/: qr_checkout_area.material
turtlebot3_service_robot/models/qr_information_desk/: model.config  model.sdf
turtlebot3_service_robot/models/qr_information_desk/materials/scripts/: qr_information_desk.material
turtlebot3_service_robot/models/qr_novel_section/: model.config  model.sdf
turtlebot3_service_robot/models/qr_novel_section/materials/scripts/: qr_novel_section.material
turtlebot3_service_robot/models/qr_science_section/: model.config  model.sdf
turtlebot3_service_robot/models/qr_science_section/materials/scripts/: qr_science_section.material
turtlebot3_service_robot/src/: qr_reader.py  task_manager.py  task_manager_node.py
