<?xml version="1.0"?>
<package format="2">
  <name>turtlebot3_service_robot</name>
  <version>1.0.0</version>
  <description>KTÜN Robotiğe Giriş - Final Ödevi</description>

  <maintainer email="ogrenci@ktun.edu.tr">Öğrenci</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>move_base_msgs</depend>
  <depend>tf</depend>

  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-yaml</exec_depend>

</package>
